[+] fix the layout issues in landscape mode
lmao idk if there is available for landscape-mode
now its should be fixed and looks better

--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -110,20 +110,23 @@ body {
   @media only screen and (max-width: 600px) {
     background-color: var(--second);
   }
+}
+
+body.landscape-mode {
   @media only screen and (orientation: landscape) {
-  background-color: var(--gray);
-  color: var(--black);
-  margin: 0;
-  padding: 0;
-  height: var(--full-height);
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  align-items: initial;
-  user-select: none;
-  touch-action: pan-x pan-y;
-  overflow: auto;
-  }
+    background-color: var(--gray);
+    color: var(--black);
+    margin: 0;
+    padding: 0;
+    height: var(--full-height);
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: initial;
+    user-select: none;
+    touch-action: pan-x pan-y;
+    overflow: auto;
+    }
 }
 
 ::-webkit-scrollbar {
